--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "main": "cors.js",
   "repository": {
     "type": "git",
-    "url" : "git://192.168.1.10/cors.git"
+    "url" : "https://github.com/uwburn/cors.git"
   }
 }
