--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "cors",
-  "version": "0.0.1",
+  "name": "cors-express",
+  "version": "1.0.0",
   "main": "cors.js",
+  "description": "Express middleware to enable cross origin resource sharing on a route",
+  "author": { 
+    "name" : "Michele Tibaldi", 
+    "url" : "https://github.com/uwburn/"
+  },
   "repository": {
     "type": "git",
-    "url" : "https://github.com/uwburn/cors.git"
-  }
+    "url" : "https://github.com/uwburn/cors-express.git"
+  },
+  "license": "LGPL-3.0"
 }
